Network/Blue-Allow-Ingress-Nginx.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress
  namespace: blue
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: ingress 
  policyTypes:
    - Ingress
