Network/Blue-Deny-All-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: blue
spec:
  podSelector: {}
  policyTypes:
    - Ingress
